# Silfvant

./: Cargo.toml  README.md
src/: config.rs  garbage.txt  lib.rs  main.rs
src/dev/: debug_gizmos.rs  mod.rs
src/engine/: bevy_config.rs  mod.rs  physics.rs  types.rs
src/engine/fs/: game_state_serialization.rs  mod.rs
src/engine/grid_coordinates/: Octree.rs
src/engine/world/: mod.rs
src/entity/: mod.rs
src/entity/component/: mod.rs  personality.rs  position.rs  velocity.rs
src/entity/npc/: mod.rs
src/entity/npc/component/: Agent.cs
src/entity/player/: mod.rs
src/entity/system/: GridSystem.rs  friction_system.rs  mod.rs  movement_system.rs
src/fsm/: ai_state.rs
src/gameplay/: garbage.txt
src/gameplay/entity/: coordinates.rs  mod.rs  personality.rs  velocity.rs
src/gameplay/entity/agent/: mod.rs
src/gameplay/entity/player/: actions.rs  mod.rs
src/gameplay/entity/system/: GridSystem.rs  friction_system.rs  mod.rs  movement_system.rs
src/gameplay/fsm/: ai_state.rs
src/gameplay/spells/: spell_cache.rs  spell_context.rs  spell_error.rs  spell_grid.rs  spell_parameter.rs  spell_source.rs
src/goap/: ability.rs  action.rs  agent.rs  cache_state.rs  goal.rs  memory.rs  mod.rs  plan.rs  planner.rs  senses.rs  tes.rs  values.rs  world_state-Legna-2.rs  world_state-Legna.rs  world_state.rs
src/goap/actions/: action.rs
src/goap/world_state/: mod.rs  world_fact.rs
src/spells/: spell.rs  spell_cache-Legna.rs  spell_cache.rs  spell_context.rs  spell_grid.rs  spell_parameter.rs  spell_source.rs
src/utility/: mod.rs
src/world_grid/: Octree.rs
(+19 files in other folders)
